# tchecker_ext

./: .gitmodules  CMakeLists.txt  LICENSE  tchecker_build_script.sh
cmake/: CheckCompilerFlags.cmake
include/: CMakeLists.txt  config.hh.in
include/tchecker_ext/algorithms/covreach_ext/: algorithm.hh  allocator.hh  builder.hh  graph.hh  options.hh  run.hh  stats.hh  waiting.hh
include/tchecker_ext/algorithms/explore_ext/: algorithm.hh  options.hh  run.hh
include/tchecker_ext/dbm/: dbm.hh
include/tchecker_ext/post_proc/: post_proc_explore.hh
include/tchecker_ext/utils/: array.hh  show_stats.hh  spinlock.hh  swapped_vector.hh  utils.hh
src/: CMakeLists.txt
src/algorithms/covreach_ext/: CMakeLists.txt  options.cc  run.cc  stats.cc
src/algorithms/explore_ext/: CMakeLists.txt  options.cc  run.cc
src/dbm/: CMakeLists.txt  dbm.cc
src/post_proc/: CMakeLists.txt
src/tchecker_ext/: explore_mono.cc  tchecker_ext.cc  test_cpy.cc
src/utils/: CMakeLists.txt  utils.cc
